<resources>
    <string name="app_name">Foresale-ai</string>
    <string name="base_url">https://forsaleai.azurewebsites.net</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_new_game">Create game</string>
    <string name="placeholder_game_hash">Enter a game hash</string>

    <!-- MainActivity !-->
    <string name="game_created">Your game has been created</string>
    <string name="no_bots"># BOTS</string>
    <string name="no_players"># PLAYERS</string>
    <string name="xor">OR</string>

    <!-- GameRunner !-->
    <string name="join_game_failed">Unable to join game: %1$s!</string>
    <string name="refresh_game_failed">Unable to refresh game: %1$s!</string>
    <string name="game_completed">The game has finished!</string>
    <string name="game_results">Here are the results</string>
    <string name="game_result_row">[%1$d!]: %2$s! scored %3$d! points.</string>

</resources>
