<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.pixelcloud.foresale_ai.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Bots and player selection !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Left column !-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/no_bots_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_bots"
                    style="@style/ForeSale.Input.Text"/>

                <nl.pixelcloud.foresale_ai.ui.components.FSNumberPicker
                    android:id="@+id/no_bots_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    min="0"
                    max="10"
                    default="2"/>

            </LinearLayout>

            <!-- Right column !-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/no_player_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_players"
                    style="@style/ForeSale.Input.Text"/>

                <nl.pixelcloud.foresale_ai.ui.components.FSNumberPicker
                    android:id="@+id/no_player_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    min="0"
                    max="10"
                    default="3"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/create_game_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_new_game"
            android:textAlignment="center"
            android:textAppearance="@style/ForeSale.Button.Text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="2px"
            android:text="@string/xor"
            android:background="@drawable/border_top_bottom"/>

        <EditText
            android:id="@+id/game_hash_text_view"
            android:paddingTop="20dp"
            style="@style/ForeSale.Input.Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_game_hash" />

    </LinearLayout>
</RelativeLayout>
